--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".UserActivity" />
         <activity android:name=".ManageUser" />
         <activity android:name=".AccountActivity" />
-        <activity android:name=".ManageAcc"></activity>
+        <activity android:name=".ManageAcc" android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
